across-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: web.nitinayyagari.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: tt-web
                port:
                  number: 80
            path: /
    - host: api.nitinayyagari.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: tt-api
                port:
                  number: 80
            path: /
